--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
   line-height: 1.6;
-  background-color: #eaeaea;
+  background-color: #404040;
   color: #333;
   margin: 0;
 }
@@ -18,7 +18,7 @@ header {
   color: #fff;
   padding: 1rem 0;
   text-align: center;
-  box-shadow: 0 4px 6px rgba(199, 11, 11, 0.1);
+  box-shadow: 0 4px 6px rgba(99, 99, 99, 0.1);
 }
 
 header h1 {
@@ -45,9 +45,9 @@ nav a:hover {
 }
 
 main {
-  max-width: 900px;
+  max-width: 700px;
   margin: 2rem auto;
-  padding: 1rem;
+  padding: 3rem;
   background: #fff;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -70,13 +70,17 @@ img {
   margin-top: 1rem;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 
 footer {
   text-align: center;
   margin-top: 2rem;
   padding: 1rem;
-  background: #283593;
+  background: #040404;
   color: #fff;
   box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
 }
